# sql-optimizer-app

./: README.md  app.py  pyproject.toml  util.py
